# duckdb_anyblob

./: CMakeLists.txt
src/: anyblob.cpp
